[project]
name = "prior-art-search"
description = "Your environment description here"
tags = ["placeholder-tag", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.36.0",
    "openai>=2.0.0",
    "python-dotenv>=1.0.0",
    "verifiers>=0.1.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["prior_art_search.py", "prepare.py", "generate_synthetic_queries.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
