[project]
name = "prior-art-search"
description = "Tool-use prior-art patent search over a local Chroma database"
tags = ["patents", "prior-art", "tools", "search", "chroma", "train", "eval"]
version = "0.1.9"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.3.0",
    "datasets>=4.0.0",
    "huggingface-hub>=0.36.0",
    "onnxruntime<1.26",
    "openai>=2.0.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=5.0.0",
    "verifiers>=0.1.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "prior_art_search.py",
    "prepare.py",
    "generate_synthetic_queries.py",
    "pyproject.toml",
    "data/3000_GLM_synthetic_patent_queries.jsonl",
]

[tool.hatch.build.targets.wheel.force-include]
"data/3000_GLM_synthetic_patent_queries.jsonl" = "data/3000_GLM_synthetic_patent_queries.jsonl"

[tool.hatch.build.targets.sdist.force-include]
"data/3000_GLM_synthetic_patent_queries.jsonl" = "data/3000_GLM_synthetic_patent_queries.jsonl"

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
